--- a/index.html
+++ b/index.html
@@ -2587,9 +2587,9 @@ window.FlexDashboardComponents.push({
 <p>A typical song for the techno playlist is: <i>Things we might have said - Reinier Zonneveld</i></p>
 <p>This is a typical techno song with a strong beat and repetitive nature.</p>
 <hr />
-<iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/1INPlxujcga9tSwvSF6jIw?utm_source=generator&amp;theme=0" width="100%" height="380" frameBorder="0" allowfullscreen allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture">
+<iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/1INPlxujcga9tSwvSF6jIw?utm_source=generator&amp;theme=0" width="50%" height="380" frameBorder="0" allowfullscreen allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture">
 </iframe>
-<iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/1SVsb8xrG47T8hNTOFqRIm?utm_source=generator&amp;theme=0" width="100%" height="380" frameBorder="0" allowfullscreen allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture">
+<iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/1SVsb8xrG47T8hNTOFqRIm?utm_source=generator&amp;theme=0" width="50%" height="380" frameBorder="0" allowfullscreen allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture">
 </iframe>
 </div>
 <div id="danceability-and-speechiness-of-the-disco-and-techno-genre" class="section level3">
@@ -2614,6 +2614,10 @@ window.FlexDashboardComponents.push({
 </div>
 <p><img src="index_files/figure-html/unnamed-chunk-2-1.png" width="576" data-figure-id=fig3 /><img src="index_files/figure-html/unnamed-chunk-2-2.png" width="360" data-figure-id=fig3 /><img src="index_files/figure-html/unnamed-chunk-2-3.png" width="576" data-figure-id=fig3 /></p>
 <hr />
+<iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/6pyzBTIjcO2AMkKE6x2Otb?utm_source=generator" width="50%" height="380" frameBorder="0" allowfullscreen allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture">
+</iframe>
+<iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/55FBE7EvGMTcLoVdqGstSX?utm_source=generator" width="50%" height="380" frameBorder="0" allowfullscreen allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture">
+</iframe>
 <p><b>‘Stayin’ Alive’ Tempo Analysis</b></p>
 <p>On the left, the first figure you see is the cyclic tempogram of the song: Stayin’ Alive by the Bee Gees (disco song). I chose this song, because the rythm of this song is the same as the tempo that is used to conduct CPR. Furthermore, Stayin’ alive rests on a ‘four on the floor’ beat, which is a really typical for disco songs (‘Disco’, 2022).</p>
 <p>As you can see by the horizontal line in the tempogram, the rythm of the song is very stable and does not change during the song, which is typical for disco songs (‘Disco’, 2022). The BPM is a little bit over 100. This is in line with the website: ‘Tunebat’, which states that the BPM of Stayin’ alive by the Bee Gees is indeed a 104 BPM.</p>
@@ -2641,6 +2645,10 @@ window.FlexDashboardComponents.push({
 </div>
 <p><img src="index_files/figure-html/unnamed-chunk-4-1.png" width="576" data-figure-id=fig8 /><img src="index_files/figure-html/unnamed-chunk-4-2.png" width="360" data-figure-id=fig8 /></p>
 <hr />
+<iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/3WMbD1OyfKuwWDWMNbPQ4g?utm_source=generator" width="50%" height="380" frameBorder="0" allowfullscreen allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture">
+</iframe>
+<iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/1eRVsFpFd4NfHG2ll5QneP?utm_source=generator" width="50%" height="380" frameBorder="0" allowfullscreen allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture">
+</iframe>
 <p>On the left, you can see the chordograms of the disco song: ‘Daddy Cool’ and the techno song: ‘the Aftermath’.</p>
 <p><b>Daddy Cool</b></p>
 <p>The chordogram for the song ‘Daddy Cool’ shows clear activity in Cmin, Fmin, Cmaj and Fmaj rows. From 150 seconds till around 170 seconds, there is a vertical yellow band, which implicates little to no activity in all rows. This is explained by the fact that there is some ‘halt’ in the song, where you hear some background music and you can hear a man talking. That is why the chordogram does not show activity for some particular chords in this part.</p>
@@ -2661,7 +2669,10 @@ window.FlexDashboardComponents.push({
 </div>
 <p><img src="index_files/figure-html/unnamed-chunk-6-1.png" width="576" data-figure-id=fig10 /><img src="index_files/figure-html/unnamed-chunk-6-2.png" width="360" data-figure-id=fig10 /></p>
 <hr />
-<p>On the left, you can see the ceptogram for the song September by Earth, Wind &amp; Fire, a typical disco song. There is a lot of activity in the C02 column. There are some chunks which are more active than others, which represent the chorus.</p>
+<iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/5FM2zyvBsSQtx9HXZ8dFsc?utm_source=generator" width="50%" height="380" frameBorder="0" allowfullscreen allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture">
+</iframe>
+<iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/1KLMFEi6H0DMVzIz4CYc4Z?utm_source=generator" width="50%" height="380" frameBorder="0" allowfullscreen allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture">
+</iframe>
 <p><b>Self Similarity Matrix of ‘I Will Survive’</b></p>
 <p>On left you can see the self similarity matrix of the song ‘I Will Survive’ by Gloria Gaynor. This is a very famous disco song. The dark blue parts of the plot represent similar parts in the song. The diagonal of the self similarity is very dark blue, which makes sense because this is where the self similarity matrix compares the same parts of the song, which of course are very similar.</p>
 <p>In the plot, there are some similar, darker chunks. From 40-70 seconds, 120-150 seconds and one from 170 seconds untill the end. These chunks represent the chorus of the song. Since the chorus is always the same, it is expected that these would show up on the self similarity matrix.</p>
@@ -2696,6 +2707,10 @@ window.FlexDashboardComponents.push({
 </div>
 <p><img src="index_files/figure-html/unnamed-chunk-9-1.png" width="576" data-figure-id=fig12 /><img src="index_files/figure-html/unnamed-chunk-9-2.png" width="360" data-figure-id=fig12 /></p>
 <hr />
+<iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/3P87vLHg7L6xGrnxQ5qpGL?utm_source=generator" width="50%" height="380" frameBorder="0" allowfullscreen allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture">
+</iframe>
+<iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/0ayyT5zbXqlXEQWoa0JggL?utm_source=generator" width="50%" height="380" frameBorder="0" allowfullscreen allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture">
+</iframe>
 <p><b>Chroma Analysis of ‘Things we might have said’</b></p>
 <p>On the left, you can see the chromagram of the song: Things we might have said by Reinier Zonneveld. The most part of the song is a repetative beat, which is represented by the many lines in the D, C# and C column. However, this repetition is interrupted two times (200 seconds and 350 seconds). You can see this in the D and C# column. The repetative beat is interrupted and there is a short buildup to a so called: ‘drop’. This is a point in a music track where a sudden change of rhythm or bass line occurs, which is preceded by a build-up section and break (‘Drop (music)’, 2022). After this interruption, the beat picks up again as you can see by the lines in the chromagram.</p>
 <p>When the D and C# column show litte to no activity, the G# and D# columns lights up. This is because in those interruptions there is a woman singing. This is represented in the G# and D# columns of the chromagram.</p>
